--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 An app that allows people to build meetups and share those with friends.
 
-1) Build authenticating system which allows users using google account to sign-in
-2) Design database structure systematically via block diagram
-3) Embed Google services via API
+(1) Build authenticating system which allows users using google account to sign-in
+(2) Design database structure systematically via block diagram
+(3) Embed Google services via API
